--- a/post_46_48.html
+++ b/post_46_48.html
@@ -160,6 +160,7 @@
                 </iframe>
               </center>
             </p>
+            <p>The robotic manipulation of the project is in the future scopeof this project and it will be fully made into grasp the respective object from the randomly ordered bin. </p>
 
             <!-- Pager -->
             <div class="clearfix">
