--- a/post_46_48.html
+++ b/post_46_48.html
@@ -160,7 +160,7 @@
                 </iframe>
               </center>
             </p>
-            <p>The robotic manipulation of the project is in the future scopeof this project and it will be fully made into grasp the respective object from the randomly ordered bin. </p>
+            <p>The robotic manipulation is in the future scope of this project and it can be fully made into grasp the respective object from the randomly ordered bin by any robot in ROS Enviornment. </p>
 
             <!-- Pager -->
             <div class="clearfix">
