--- a/post_46_48.html
+++ b/post_46_48.html
@@ -113,6 +113,12 @@
             </p>
 
             <font size="6"><b>Implementation and Testing in ROS.</b></font>
+            <p>
+               A package for detecting and estimating the 6- DoF pose of known objects using a novel architecture and data generation pipeline using the state of the art algorithm DOPE in Aubo i5 collaborative robot with Intel Realsense D435i camera.
+               The neural network consists several steps to reﬁne and estimates of the 2D coordinates of projected vertices of each object’s 3D bounding cuboid. These vertices are then used to output the ﬁnal pose using PnP, with known camera intrinsic and object dimensions. 
+               The neural network trained only on photorealistic data can attain state of the art results compared with a neural network trained on real world data and resulting poses are with much needed accuracy for robotic pick and place.
+               Download : <a href="https://github.com/avinashsen707/AUBOi5-D435-ROS-DOPE">____</a>
+            </p>
             <p><b>Running ROS master, camera node, DOPE node and rviz node:</b></p>
             <p>
               1. Start ROS master :
