--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
               Experimental Set-up in the Laboratory.
             </h2>
             <iframe width="640" height="360"
-              src="https://www.youtube.com/embed/7gsZfrnAFLY?autoplay=1&loop=1&playlist=7gsZfrnAFLY">
+              src="https://www.youtube.com/embed/IGGV9dj_fZs?autoplay=1&loop=1&playlist=IGGV9dj_fZs">
             </iframe> 
           </div>
         </div>
