--- a/post_27_29.html
+++ b/post_27_29.html
@@ -79,19 +79,19 @@
             <p>
               I used a simple deep network architecture, trained entirely on simulated data, to infer the 2D image coordinates of projected 3D bounding boxes, followed by perspective-n-point (PnP) for the segmentation of camera data. Its called DOPE – Deep Object Pose Estimation System.
 
-              Followed these Methodologies:
-              1.Created a 3D CAD models in solidworks in (.stl/.ply format)
-              2.Imported in the BLENDER to give color, material, unit scales etc to object and export as (.fbx) file.
-              3.Imported the blender file in UNREAL ENGINE (v4.22)
-              4.Created the Dataset by capturing using NDDS plugin.
-              5.Trained the custom created dataset in CNN by Deep learning.
-              6.Saved the weights of the training for further System Integration.
+              <p>Followed these Methodologies:</p>
+              <p>1.Created a 3D CAD models in solidworks in (.stl/.ply format).</p>
+              <p>2.Imported in the BLENDER to give color, material, unit scales etc to object and export as (.fbx) file.</p>
+              <p>3.Imported the blender file in UNREAL ENGINE (v4.22).</p>
+              <p>4.Created the Dataset by capturing using NDDS plugin.</p>
+              <p>5.Trained the custom created dataset in CNN by Deep learning.</p>
+              <p>6.Saved the weights of the training for further System Integration.</p>
             </p>
             <font size="5"><b>Creation of Custom objects using the Blender tool</b></font>
             <p>
               Make a 3D model in solidworks or CAD etc.,then import a 3D model in Blender (.stl .dae ...) and export it as a fbx file then import that fbx file into UE4, fbx file is work in UE4.
             
-              For more, __Download__<a href="https://www.blender.org/">__[[Blender]]__</a>              
+              <p>For more, __Download__<a href="https://www.blender.org/">__[[Blender]]__</a></p>             
             </p>            
             <p><b>Blender Setup for Creating the 3D Model object:</b></p>
             <p>
