--- a/post_31_32.html
+++ b/post_31_32.html
@@ -83,7 +83,7 @@
                 Initially, I sent an abstract of my current work and it has been selected for presentation. Thereafter the draft copy preparation work started.
               </p>
               
-              <p><b>Paper Draft Copy:</b></p>
+              <p><b>Paper Proceedings Copy:</b></p>
               <center>
                 <div class="graph-outline">
                   <object style="width:100%;" data="img/MACE_Avinash_Sen_GEC_Thrissur.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0" type="application/pdf">
