--- a/post_33_34.html
+++ b/post_33_34.html
@@ -88,7 +88,7 @@
               
               <p>
                 <b>Github Repository : 2D-Object-Pose-Estimation---Realsense-D435 : </b>
-                Object 3DoF Pose Estimation trained by RGB Data - Using Intel® RealSense D435
+                Development and Evaluation of a Deep Learning based Robotic Bin Picking Vision System using ROS
               </p>
               <center>
                 <p><img class="img-fluid" src="img/2dgithub.png" alt=""></p>
