--- a/post_49_50.html
+++ b/post_49_50.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <p><font size="6"><b>Presentation and Demonstrarion</b></font></p>
+            <p><font size="6"><b>Presentation</b></font></p>
             <p>
               On June 30th, we had our Final NCRAI Meeting,
             </p>
