--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Avinash Sen - Master's Project Blog</title>
+    <title>Avinash Sen - Master Research Project Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Bin Picking System</h1>
-              <span class="subheading">My Master's Project Blog</span>
+              <span class="subheading">My Master Research Project Blog</span>
             </div>
           </div>
         </div>
