--- a/post_49_50.html
+++ b/post_49_50.html
@@ -102,6 +102,14 @@
 
             <p>
               In the experiment on the cracker box, the mean distance error was 0.81, and the standard deviation was 0.7, for detected object.
+              We repeated the experiment on the cracker box five times. The results of this experiment are shown in Table below.
+            </p>
+
+            <center>
+              <p><img class="img-fluid" src="img/table2.png" alt=""></p>
+            </center>
+
+            <p>
               As demonstrated through the experiment results above, the average error rate in the distance to the target object was around 1 mm.
               Therefore, even when assuming that an error of up to 2 mm may occur, there was no problem for the robot to pick up the object in our bin picking environment.
             </p>
