--- a/about.html
+++ b/about.html
@@ -68,8 +68,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>
-            My name is Avinash Sen and I am a Manufacturing Systems Management (Mechanical Engineering) final semester Student at the Government Engineering College Thrissur, in Kerala, India.
-            I did my B.Tech in  Mechatronics Engineering and I am an Experienced Maintenance Engineer with a demonstrated history of working with Automation systems.
+            My name is Avinash Sen and I completed M.Tech (Mechanical Engineering) in Government Engineering College, Thrissur. I did my B.Tech in  Mechatronics Engineering and I am an Experienced Maintenance Engineer with a demonstrated history of working with Automation systems.
           </p>
           <p>
             I am seeking a job that would synergize my skills and knowledge with the objectives of the organization. If you give me a chance,  being a dedicated and focused individual who is passionate about learning, I will definitely be a vital asset to your organisation.
