--- a/about.html
+++ b/about.html
@@ -71,6 +71,9 @@
             My name is Avinash Sen and I completed M.Tech (Mechanical Engineering) in Government Engineering College, Thrissur. I did my B.Tech in  Mechatronics Engineering and I am an Experienced Maintenance Engineer with a demonstrated history of working with Automation systems.
           </p>
           <p>
+            I am grateful to express my thanks to all the faculty members of our <a href="https://github.com/Nodal-Centre-for-Robotics-and-AI-GECT">Nodal Centre for Robotics and Artificial Intelligence (NCRAI)</a> and Production Engineering department for their support. I articulate my gratitude to all my associates and colleagues for their support and help for this work.
+          </p>
+          <p>
             I am seeking a job that would synergize my skills and knowledge with the objectives of the organization. If you give me a chance,  being a dedicated and focused individual who is passionate about learning, I will definitely be a vital asset to your organisation.
           </p>
           <p>
